--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 .gradle
 build
 
+# node
+node_modules/
+
+# vite
+dist/
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+.vite/
+
 # IntelliJ IDEA
 .idea
 *.iws
@@ -22,3 +31,6 @@ out/
 
 # mise
 mise.local.toml
+
+# app
+app/src/main/resources/frontend/
